# circom-witnesscalc

./: .gitmodules  Cargo.toml  README.md  build.rs  test_circuits.sh
examples/: calc_witness.c
protos/: messages.proto
script/: replace.sh
src/: field.rs  generate.rs  graph.rs  lib.rs  storage.rs
test_circuits/: circuit1.circom  circuit11_key_expansion.circom  circuit11_key_expansion_inputs.json  circuit1_inputs.json  circuit2.circom  circuit3.circom  circuit4.circom  circuit4_inputs.json  circuit5_poseidon.circom  circuit5_poseidon_inputs.json  circuit6_num2bits.circom  circuit7_poseidon4.circom  circuit7_poseidon4_inputs.json  circuit8_sha256_512.circom  circuit8_sha256_512_inputs.json  circuit9_authV2.circom
